# envguard

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  api_server.py  billing.py  prod.env  profile_readme.md  pyproject.toml  render.yaml  requirements.txt  sample.env  setup.py
.github/workflows/: ci.yml
envguard/: __init__.py  cli.py  core.py  diff.py  leaks.py
tests/: test_billing.py  test_core.py
